# Q4_25_Builder_Anudeep

./: README.md
airdrop/: .gitignore  README.md  TS_Client_Logic.md  airdrop.ts  convertion-helpers.ts  drain-wallet.ts  enroll.ts  keygen.ts  package-lock.json  package.json  transfer.ts
airdrop/programs/: Turbin3_prereq.json
airdrop/scripts/: generate-client.ts
airdrop2/: .gitignore  README.md
airdrop2/src/: lib.rs
anchor-amm-starter-q4-25/: Anchor.toml  package.json  pnpm-lock.yaml
anchor-amm-starter-q4-25/tests/: anchor-amm-q4-25.ts
anchor-dice-game-starter-q4-25/: Anchor.toml  package.json
anchor-dice-game-starter-q4-25/tests/: anchor-dice-game-q4-25.ts
anchor-escrow-starter-q4-25/: Anchor.toml
anchor-mplxcore-starter-q4-25/: package.json
anchor-nft-staking-starter-q4-25/: .gitignore  Anchor.toml  package.json  txtx.yml
anchor-nft-staking-starter-q4-25/runbooks/: README.md
anchor-nft-staking-starter-q4-25/tests/: anchor-nft-staking-q4-25.ts
anchor-vault-starter-q4-25/: Anchor.toml
capstone-project-q4-25/: Anchor.toml  README.md
capstone-project-q4-25/tests/: capstone-project-q4-25.ts
capstone/mapsdotfun-client/: LICENCE  (+3 more)
capstone/poaponsol/programs/poaponsol/: Cargo.toml
capstone/poaponsol/programs/poaponsol/src/: constants.rs  errors.rs  events.rs  lib.rs
capstone/poaponsol/programs/poaponsol/src/instructions/: close_event.rs  create_event.rs  mint_badge.rs  mod.rs
capstone/poaponsol/programs/poaponsol/src/state/: claim_record.rs  collection_authority.rs  event.rs  mod.rs  organizer_profile.rs
solana-starter/: .gitignore
(+140 files in other folders)
