[package]
name = "poaponsol"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "poaponsol"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1


[dependencies]
anchor-lang ={version = "0.32.1", features = ["init-if-needed"]}
mpl-core = { version = "0.11.1", features = ["anchor"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
